ZODB Requires:
~~~~~~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- rewrite Link widget into Compound widget
- new MetaData storage adaptater a metadata use getter/setter method like
  Title() and setTitle()
- Fields can now be computed/processed on read and write.
- Don't initialize fields with the widget name by default.
Bug fixes:
~~~~~~~~~~
- do not raise exception if 2 schemas have a field in common
  this case is possible when you change your schema definition
- Fix lines widget to deal with Zope bug where it returns [''] instead of [].
- Fix image widget to use a correct absolute URL for the image.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Pass the datamodel as argument to postCommitHook as it is sometimes
  needed.